# private-insurance

./: README.md
insur-front/: README.md  package-lock.json  package.json
insur-front/public/: index.html  manifest.json
insur-front/src/: App.css  App.tsx  config.ts  index.css
insur-front/src/model/: expressions.ts
insur-front/src/store/: store.ts
insur-front/src/store/api/: expression.service.ts
priv-ins/: Cargo.toml  variables_config.json
priv-ins/src/: main.rs
priv-ins/src/crypto/: arithmetics.rs  mod.rs  shares.rs
priv-ins/src/expressions/: mod.rs
priv-ins/src/protocol/: arithmetics.rs  dealer.rs  expression.rs  mod.rs  network.rs  node.rs  party.rs  test.rs
priv-ins/src/rest/: mod.rs
