[package]
name = "priv-ins"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
ff = { version = "0.11", features = ["derive"] }
rand = "0.8.4"
async-trait = "0.1.52"
