[package]
name = "priv-ins"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
ff = { version = "0.11", features = ["derive"] }
rand = "0.8.4"
async-trait = "0.1.52"
num-traits = "0.2.14"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
log = "0.4.14"
sha3 = "0.9.1"
